force-app/main/default/objects/Hero_Employee__c/Hero_Employee__c.object-meta.xml
<CustomObject>
    <label>Hero Employee</label>
    <nameField>
        <label>Hero Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hero Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>