force-app/main/default/objects/Hero_Employee__c/fields/Emp_Address__c.field-meta.xml
<CustomField>
    <fullName>Emp_Address__c</fullName>
    <label>Emp Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>