force-app/main/default/objects/Hero_Employee__c/fields/Emp_Deptt__c.field-meta.xml
<CustomField>
    <fullName>Emp_Deptt__c</fullName>
    <label>Emp Deptt</label>
    <length>100</length>
    <type>Text</type>
</CustomField>