force-app/main/default/objects/Hero_Employee__c/fields/Emp_Father_Name__c.field-meta.xml
<CustomField>
    <fullName>Emp_Father_Name__c</fullName>
    <label>Emp Father Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>